Refactor: New names for field-set prefixes

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge.cfg
@@ -114,7 +114,7 @@ interface Vxlan1
 application traffic recognition
    !
    application ipv4 APP-CONTROL-PLANE
-      destination prefix field-set APP-DEST-PFX-CONTROL-PLANE
+      destination prefix field-set PFX-PATHFINDERS
    !
    application-profile APP-PROFILE-CONTROL-PLANE
       application APP-CONTROL-PLANE
@@ -125,7 +125,7 @@ application traffic recognition
    !
    application-profile VOICE
    !
-   field-set ipv4 prefix APP-DEST-PFX-CONTROL-PLANE
+   field-set ipv4 prefix PFX-PATHFINDERS
       192.168.131.1/32 192.168.131.2/32
 !
 ip routing
