--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
@@ -257,7 +257,7 @@ interface Vxlan1
 application traffic recognition
    !
    application ipv4 APP-CONTROL-PLANE
-      source prefix field-set APP-SRC-PFX-CONTROL-PLANE
+      source prefix field-set PFX-LOCAL-VTEP-IP
    !
    application ipv4 CUSTOM-APPLICATION-1
       source prefix field-set CUSTOM-SRC-PREFIX-1
@@ -282,14 +282,14 @@ application traffic recognition
    application-profile VOICE
       application CUSTOM-VOICE-APPLICATION
    !
-   field-set ipv4 prefix APP-SRC-PFX-CONTROL-PLANE
-      192.168.144.3/32
-   !
    field-set ipv4 prefix CUSTOM-DEST-PREFIX-1
       6.6.6.0/24
    !
    field-set ipv4 prefix CUSTOM-SRC-PREFIX-1
       42.42.42.0/24
+   !
+   field-set ipv4 prefix PFX-LOCAL-VTEP-IP
+      192.168.144.3/32
    !
    field-set l4-port TCP-DEST-2
       666, 777
