--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr1.cfg
@@ -107,7 +107,7 @@ interface Vxlan1
 application traffic recognition
    !
    application ipv4 APP-CONTROL-PLANE
-      source prefix field-set APP-SRC-PFX-CONTROL-PLANE
+      source prefix field-set PFX-LOCAL-VTEP-IP
    !
    application-profile APP-PROFILE-CONTROL-PLANE
       application APP-CONTROL-PLANE
@@ -118,7 +118,7 @@ application traffic recognition
    !
    application-profile VOICE
    !
-   field-set ipv4 prefix APP-SRC-PFX-CONTROL-PLANE
+   field-set ipv4 prefix PFX-LOCAL-VTEP-IP
       192.168.131.1/32
 !
 ip routing
