--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
@@ -181,12 +181,12 @@ interface Vxlan1
 application traffic recognition
    !
    application ipv4 APP-CONTROL-PLANE
-      destination prefix field-set APP-DEST-PFX-CONTROL-PLANE
+      destination prefix field-set PFX-PATHFINDERS
    !
    application-profile APP-PROFILE-CONTROL-PLANE
       application APP-CONTROL-PLANE
    !
-   field-set ipv4 prefix APP-DEST-PFX-CONTROL-PLANE
+   field-set ipv4 prefix PFX-PATHFINDERS
       192.168.144.1/32
 !
 ip routing
