--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -302,7 +302,7 @@ interface Vxlan1
 application traffic recognition
    !
    application ipv4 APP-CONTROL-PLANE
-      destination prefix field-set APP-DEST-PFX-CONTROL-PLANE
+      destination prefix field-set PFX-PATHFINDERS
    !
    application ipv4 CUSTOM-APPLICATION-1
       source prefix field-set CUSTOM-SRC-PREFIX-1
@@ -327,14 +327,14 @@ application traffic recognition
    application-profile VOICE
       application CUSTOM-VOICE-APPLICATION
    !
-   field-set ipv4 prefix APP-DEST-PFX-CONTROL-PLANE
-      192.168.144.1/32
-   !
    field-set ipv4 prefix CUSTOM-DEST-PREFIX-1
       6.6.6.0/24
    !
    field-set ipv4 prefix CUSTOM-SRC-PREFIX-1
       42.42.42.0/24
+   !
+   field-set ipv4 prefix PFX-PATHFINDERS
+      192.168.144.1/32
    !
    field-set l4-port TCP-DEST-2
       666, 777
