CI(molecule): Update Molecule artifacts

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-link-state.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-link-state.cfg
@@ -12,12 +12,13 @@ interface Management1
    vrf MGMT
    ip address 10.73.255.122/24
 !
-router bgp 65101
+router bgp 65101.0001
+   bgp asn notation asdot
    router-id 192.168.255.3
    neighbor PG-1 peer group
-   neighbor PG-1 remote-as 65001
+   neighbor PG-1 remote-as 65001.0002
    neighbor PG-2 peer group
-   neighbor PG-2 remote-as 65001
+   neighbor PG-2 remote-as 65001.0003
    !
    address-family link-state
       bgp missing-policy direction in action permit
