--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
@@ -1024,12 +1024,12 @@ keys:
             groups:
               type: list
               primary_key: group
-              description: Group Address.
               items:
                 type: dict
                 keys:
                   group:
                     type: str
+                    description: Multicast Address.
                   exclude:
                     type: list
                     primary_key: source
@@ -1052,7 +1052,6 @@ keys:
                 - str
               min: 1
               max: 31744
-              default: 1
               description: Time interval between unsolicited reports.
             access_lists:
               type: list
@@ -1069,7 +1068,6 @@ keys:
                 - str
               min: 1
               max: 3
-              default: 3
               description: IGMP version on IGMP host-proxy interface.
         peer:
           type: str
