--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/port_channel_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/port_channel_interfaces.schema.yml
@@ -760,19 +760,15 @@ keys:
             groups:
               type: list
               primary_key: group
-              # convert_types:
-              #   - dict
-              description: Group Address.
               items:
                 type: dict
                 keys:
                   group:
                     type: str
+                    description: Multicast Address.
                   exclude:
                     type: list
                     primary_key: source
-                    # convert_types:
-                    #   - dict
                     items:
                       type: dict
                       keys:
@@ -781,8 +777,6 @@ keys:
                   include:
                     type: list
                     primary_key: source
-                    # convert_types:
-                    #   - dict
                     items:
                       type: dict
                       keys:
@@ -794,13 +788,10 @@ keys:
                 - str
               min: 1
               max: 31744
-              default: 1
               description: Time interval between unsolicited reports.
             access_lists:
               type: list
               primary_key: name
-              # convert_types:
-              #   - dict
               description: Non-standard Access List name.
               items:
                 type: dict
@@ -813,7 +804,6 @@ keys:
                 - str
               min: 1
               max: 3
-              default: 3
               description: IGMP version on IGMP host-proxy interface.
         peer:
           type: str
