--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vlan_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vlan_interfaces.schema.yml
@@ -97,12 +97,12 @@ keys:
             groups:
               type: list
               primary_key: group
-              description: Group Address.
               items:
                 type: dict
                 keys:
                   group:
                     type: str
+                    description: Multicast Address.
                   exclude:
                     type: list
                     primary_key: source
@@ -125,7 +125,6 @@ keys:
                 - str
               min: 1
               max: 31744
-              default: 1
               description: Time interval between unsolicited reports.
             access_lists:
               type: list
@@ -142,7 +141,6 @@ keys:
                 - str
               min: 1
               max: 3
-              default: 3
               description: IGMP version on IGMP host-proxy interface.
         ip_helpers:
           type: list
