Fix(eos_cli_config_gen): Replacing 'transparent' mode in ptp with other supported valid values

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7999,7 +7999,11 @@ keys:
         type: str
         valid_values:
         - boundary
-        - transparent
+        - disabled
+        - e2etransparent
+        - gptp
+        - ordinarymaster
+        - p2ptransparent
       mode_one_step:
         type: bool
       forward_unicast:
