--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder.yml
@@ -496,6 +496,7 @@ metadata:
         value: '999'
   cv_pathfinder:
     role: pathfinder
+    ssl_profile: profileA
     vtep_ip: 192.168.144.1
     interfaces:
     - name: Ethernet1
